Added math/stat fair, OAMN workshop, OAMN membership

--- a/CV/jenniferz-cv-aug-2021.tex
+++ b/CV/jenniferz-cv-aug-2021.tex
@@ -27,11 +27,11 @@
 \name{Jennifer}{Zhu}
 %\title{Curriculum Vit\ae}                               % optional, remove / comment the line if not wanted
 %\address{street and number}{postcode city}{country}% optional, remove / comment the line if not wanted; the "postcode city" and "country" arguments can be omitted or provided empty
-\phone[phone]{Updated August 23, 2021}
+\phone[phone]{Updated August 30, 2021}
 %phone[mobile]{+1~(234)~567~890}                   % optional, remove / comment the line if not wanted; the optional "type" of the phone can be "mobile" (default), "fixed" or "fax"
 %\phone[fixed]{+2~(345)~678~901}
 %\phone[fax]{+3~(456)~789~012}
-\email{j446zhu@waterloo.ca}                               % optional, remove / comment the line if not wanted
+\email{jennifer.zhu@uwaterloo.ca}                               % optional, remove / comment the line if not wanted
 \homepage{https://jenniferz42.github.io/}                         % optional, remove / comment the line if not wanted
 %\social[linkedin]{john.doe}                        % optional, remove / comment the line if not wanted
 %\social[twitter]{jdoe}                             % optional, remove / comment the line if not wanted
@@ -99,23 +99,31 @@
 
 \section{Service}
 
-\subsection{Leadership}
-\singleline{}{\textbf{American Mathematical Society Graduate Student Chapter}}{Texas A\&M University}
-\singleline{}{\qquad Treasurer}{2020 - 2021}
-\cvitem{}{\textbf{TAMU Math Graduate Student Diversity Committee}}
-\singleline{}{\qquad Vice President}{Spring 2021}
-\singleline{}{\qquad Co-founder, committee member}{Fall 2020}
-
-\subsection{Mentorship}
-\doubleline{Fall 2020}{\textbf{Directed Reading Program (DRP) Mentor}}{Guided an undergraduate through applications of linear algebra to mathematical biology.}{Texas A\&M University}
-
-%\subsection{Outreach}
-
 \subsection{Conferences}
 \singleline{Fall 2020}{\textbf{Advocating for Students of Color}}{{AMS} (online)}
 \singleline{Nov 20 - 22, 2020}{\textbf{AMS paraDIGMS Fall Conference}}{IMSI (online)}
 
+\subsection{Leadership}
+\singleline{}{\textbf{American Mathematical Society Graduate Student Chapter}}{Texas A\&M University}
+\singleline{2020 - 2021}{\qquad Treasurer}{}
+\singleline{}{\textbf{TAMU Math Graduate Student Diversity Committee}}{Texas A\&M University}
+\singleline{Spring 2021}{\qquad Vice President}{}
+\singleline{Fall 2020}{\qquad Co-founder}{}
+
+\subsection{Mentorship}
+\singleline{}{\textbf{Directed Reading Program (DRP) Mentor}}{Texas A\&M University}
+\singleline{Fall 2020}{Guided an undergraduate through applications of linear algebra to mathematical biology.}{}
+
+\subsection{Membership}
+\singleline{Spring 2020 - present}{\textbf{\href{https://oamentornetwork.wordpress.com/}{\underline{Operator Algebras Mentor Network} (OAMN) Mentee}} }{}{}
+
+\subsection{Outreach}
+\doubleline{Spring 2021}{\textbf{Math/Stats Fair Volunteer}}{}{Texas A\&M University}
+
 \section{Workshops Attended}
+
+\singleline{August 27, 2021}{\textbf{OAMN Mentorship Training: Diversity, Equity, and Inclusion} \\ 
+Participated in a workshop led by Dr. Chandra Erdman and Erin Brown highlighting mentors can use their advantages to mitigate disadvantages mentees might face.} {}
 \singleline{June 21 - July 30, 2021}{\textbf{Math-to-Industry Boot Camp}
 \begin{itemize}
 \item Intense six-week program providing PhD students in mathematics necessary skills to work outside of academia.
