Added TA ratings

--- a/CV/jenniferz-cv-aug-2021.tex
+++ b/CV/jenniferz-cv-aug-2021.tex
@@ -94,8 +94,8 @@
 
 \section{Teaching}
 
-\doubleline{Spring 2021}{\textbf{Recitations}, Math 152: Engineering Mathematics II}{Proctored and graded tests, created review material based on lecture notes, answered questions in class, by email, and via Piazza.}{Texas A\&M University}
-\doubleline{Fall 2020}{\textbf{Recitations}, Math 147: Calculus I for Biological Sciences}{Proctored and graded tests, created review material based on lecture notes, answered questions in class and by email.}{Texas A\&M University}
+\doubleline{Spring 2021}{\textbf{Recitations}, Math 152: Engineering Mathematics II (4.23/5)}{Proctored and graded tests, created review material based on lecture notes, answered questions in class, by email, and via Piazza. Rating based on fostering an effective learning environment, effectiveness of teaching methods, helpfulness of online materials.}{Texas A\&M University}
+\doubleline{Fall 2020}{\textbf{Recitations}, Math 147: Calculus I for Biological Sciences (3.96/5)}{Proctored and graded tests, created review material based on lecture notes, answered questions in class and by email. Rating based on fostering an effective learning environment.}{Texas A\&M University}
 
 \section{Service}
 
