--- a/CV/jenniferz-cv-aug-2021.tex
+++ b/CV/jenniferz-cv-aug-2021.tex
@@ -27,7 +27,7 @@
 \name{Jennifer}{Zhu}
 %\title{Curriculum Vit\ae}                               % optional, remove / comment the line if not wanted
 %\address{street and number}{postcode city}{country}% optional, remove / comment the line if not wanted; the "postcode city" and "country" arguments can be omitted or provided empty
-\phone[phone]{Updated August 30, 2021}
+\phone[phone]{Updated \today}
 %phone[mobile]{+1~(234)~567~890}                   % optional, remove / comment the line if not wanted; the optional "type" of the phone can be "mobile" (default), "fixed" or "fax"
 %\phone[fixed]{+2~(345)~678~901}
 %\phone[fax]{+3~(456)~789~012}
